# PyClassifiers

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  TECHNICAL_ANALYSIS_REPORT.md  conanfile.py  gcovr.cfg  vcpkg-configuration.json  vcpkg.json
cmake/modules/: CodeCoverage.cmake
config/: config.h.in
lib/Files/: ArffFiles.cc  ArffFiles.h  CMakeLists.txt
pyclfs/: AdaBoost.cc  AdaBoost.h  AdaBoostPy.cc  AdaBoostPy.h  CMakeLists.txt  ODTE.cc  PBC4cip.cc  PBC4cip.h  PyClassifier.cc  PyClassifier.h  PyHelper.hpp  PyWrap.cc  PyWrap.h  RandomForest.h  STree.cc  SVC.h  XGBoost.cc  XGBoost.h
src/: CMakeLists.txt  ODTE.cc  PyClassifier.h  RandomForest.cc  STree.h  SVC.cc
src/PyClassifiers/: CMakeLists.txt  ODTE.h  PyClassifier.h  PyHelper.hpp  PyWrap.cc  PyWrap.h  TypeId.h  XGBoost.cc  XGBoost.h
tests/: CMakeLists.txt  TestPythonClassifiers.cc  TestUtils.cc  TestUtils.h
tests/config/: SourceData.h.in
